[gd_scene load_steps=6 format=2]

[ext_resource path="res://PropertyPowerUp.gd" type="Script" id=1]
[ext_resource path="res://sound/sheet-em-up-power-up.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 16.0784, 15.3523 )

[sub_resource type="Animation" id=8]

resource_name = "PowerUp"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.171753, 0.529113, 0.65625, 1 ), Color( 0.376892, 0.64633, 0.742188, 1 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "PowerUp"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 30 ), Vector2( 55, 52 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D/ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -15, -14 ), Vector2( -27, -25 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}

[node name="PropertyPowerUp" type="Area2D"]

position = Vector2( 712.418, 429.38 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.0
angular_damp = 0.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]
powerup_type = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="CollisionShape2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -15.0
margin_top = -14.0
margin_right = 17.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.171753, 0.529113, 0.65625, 1 )
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="CollisionShape2D/ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "JY"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PowerUpColourAnim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = "PowerUp"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/PowerUp = SubResource( 8 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "FX"

[node name="PowerUpPickUpAnim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/PowerUp = SubResource( 9 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[connection signal="body_entered" from="." to="." method="_on_PropertyPowerUp_body_entered"]

[connection signal="animation_finished" from="PowerUpPickUpAnim" to="." method="_on_PowerUpPickUpAnim_animation_finished"]


